- added spacing between fieldsets - fixed styles to use em, when appropriate

--- a/css/custom/checkbox.css
+++ b/css/custom/checkbox.css
@@ -8,7 +8,7 @@ input[type=checkbox] {
   border-radius: 100%;
   vertical-align: bottom;
   position: relative;
-  margin-right: 2px;
+  margin-right: 0.25em;
 }
 
 input[type=checkbox][disabled],
