--- a/css/custom/fieldset.css
+++ b/css/custom/fieldset.css
@@ -3,6 +3,10 @@ fieldset {
   flex-flow: column wrap;
 }
 
+fieldset + fieldset {
+  margin-top: 1em;
+}
+
 /* ==========================================================================
    EXAMPLE Media Queries for Responsive Design.
    These examples override the primary ('mobile first') styles.
